--- a/Google Guanabara/Desafios/desafio_10.html
+++ b/Google Guanabara/Desafios/desafio_10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,10 @@
             height: 8vh;
             background-color: darkgreen;
             color: #ffffff;
+            cursor:pointer;
+            box-shadow: 2px 2px 2px 2px black;
+            border:none;
+            border-radius:4px;
         }
     </style>
 </head>
