--- a/W3_school_ JS/calculadora_js.html
+++ b/W3_school_ JS/calculadora_js.html
@@ -6,19 +6,43 @@
     <title>Calculadora com Janelas</title>
     <link rel="shortcut icon" href="nav.ico" type="image/x-icon">
     <style>
-        boby {
+        body {
             background-color: aquamarine;
         }
         h2{
             font-family: Arial, Helvetica, sans-serif;
             font-size: 25pt;
-            color:chartreuse
+            color:white;
+        }
+        button{
+            padding: 20px;
+            border-radius: 5px;
+            background-color: lightgreen;
+            transition: 2s;
+            cursor: pointer;
+            font-family: Verdana, Geneva, Tahoma, sans-serif, Helvetica, sans-serif;
+        }
+        button:hover{
+            background-color: lightskyblue;
+        }
+        button:active{
+            background-color: red;
+        }
+        h3{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: white; 
+        }
+        h4{
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
     </style>
 </head>
 <body>
     <h2>Esse site é uma calculadora que usa janelas.</h2>
+    <button onclick="calculo()">CALCULADORA</button>
     <script>
+        function calculo(){
         let calculo = parseInt(window.prompt('Escolha a operação que você quer fazer: \n1- Soma \n2-Menos \n3-Multiplicação \n4-Divisão'));
         if (calculo == 1 ){
             let soma_1 = parseFloat(window.prompt('Digite o número: '));
@@ -26,7 +50,7 @@
             /*Verifica se ambos os valores são NaN*/
             if(!isNaN(soma_1)&& !isNaN(soma_2)){
             let soma = soma_1 + soma_2;
-            document.write(`<h2>A soma entre ${soma_1} e ${soma_2} é igual á ${soma}</h2>`);
+            document.getElementById('demo').innerHTML =`<h4>A soma entre ${soma_1} e ${soma_2} é igual á ${soma}</h2>`;
             }else{
                 window.alert('O número digitado não é numérico, digite novamente por favor:')
                 window.location.reload();
@@ -36,7 +60,7 @@
             let dif_2 = parseFloat(window.prompt('Digite outro número: '))
             if (!isNaN(dif_1) && !isNaN(dif_2)) {
             let diferenca = dif_1 - dif_2
-            document.write(`<h2>A diferença entre ${dif_1} e ${dif_2} é igual á ${diferenca}</h2>`)
+            document.getElementById('demo').innerHTML = `<h4>A diferença entre ${dif_1} e ${dif_2} é igual á ${diferenca}</h4>`
             }else{
                 window.alert('O número digitado não é numérico, digite novamente por favor:')
                 window.location.reload();
@@ -46,7 +70,7 @@
             let mult_1 = parseFloat(window.prompt('Digite outro número: '))
             if (!isNaN(mult) && !isNaN(mult_1)){
             let multiplicacao = mult * mult_1
-            document.write(`<h2>A multiplicação entre ${mult} e ${mult_1} é igual á ${multiplicacao}</h2>`)
+            document.getElementById('demo').innerHTML = `<h4>A multiplicação entre ${mult} e ${mult_1} é igual á ${multiplicacao}</h4>`
             }else{
                 window.alert('O número digitado não é numérico, digite novamente por favor:')
                 window.location.reload();
@@ -56,7 +80,7 @@
             let divisao_1 = parseFloat(window.prompt('Digite outro número: '))
             if (!isNaN(divisao) && !isNaN(divisao_1)) {
             div_0 = divisao / divisao_1
-            document.write(`<h2>A divisão entre os valores ${divisao} e ${divisao_1} é igual á ${div_0}</h2>`)
+            document.getElementById('demo').innerHTML = `<h4>A divisão entre os valores ${divisao} e ${divisao_1} é igual á ${div_0.toFixed(2)}</h4>`
             }else{
                 window.alert('O número digitado não é numérico, digite novamente por favor:')
                 window.location.reload(); 
@@ -65,6 +89,8 @@
             window.alert('O número digitado não corresponde ao programa ');
             window.location.reload();
         }
+    }
     </script>
+    <h3 id="demo">Aqui irá aparecer o resultado!</h3>
 </body>
 </html>
