--- a/Google_Guanabara/Desafios/desafio_10.html
+++ b/Google_Guanabara/Desafios/desafio_10.html
@@ -6,7 +6,8 @@
     <title>Fórmula de Bhaskara</title>
     <style>
         body{
-            background-color: rgb(9, 255, 173);
+            background-color: black;
+            color: #ffffff;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -20,30 +21,35 @@
         button{
             width: 80px;
             height: 8vh;
-            background-color: darkgreen;
+            background-color: red;
             color: #ffffff;
             cursor:pointer;
             box-shadow: 2px 2px 2px 2px black;
             border:none;
             border-radius:4px;
+            margin-bottom: 30px;
         }
     </style>
 </head>
 <body>
     <h1>Resolvendo Bhaskara</h1>
     <button onclick="bhaskara()">Calcular</button>
-    <p>Considerando a equação no formato <strong>ax2 + bx + c = 0</strong>,aperte<br>o botão acima para calcular o valor de Δ </p>
     <h2>Com o calculo feito fica assim</h2>
     <div id="calculo">
-        <p></p>
+        <p>Considerando a equação no formato <strong>ax2 + bx + c = 0</strong>,aperte<br>o botão acima para calcular o valor de Δ </p>
     </div>
     <script>
         function bhaskara(){
+            let calculo = document.getElementById('calculo');
             let a = parseInt(window.prompt('Qual é o valor de a: '));
             let b = parseInt(window.prompt('Qual é o valor de b: '));
             let c = parseInt(window.prompt('Qual é o valor de c: '));
             let delta = (b)**2-4*(a)*(c)
-            calculo.innerHTML = `A equação atual é<strong> ${a}x<sup>2</sup> + ${b}x + ${c} = 0</strong>\nO calculo realizado será de <strong>Δ = ${b}<sup>2</sup> -4 . ${a} . ${c}</strong>\n O valor calculado será de <mark>Δ = ${delta}</mark>`
+            calculo.innerHTML = `A equação atual é<strong> ${a}x<sup>2</sup> + ${b}x + ${c} = 0</strong><br>` +
+            `O calculo realizado será de <strong>Δ = ${b}<sup>2</sup> -4 . ${a} . ${c}</strong><br>` +
+            `O valor calculado será de <mark>Δ = ${delta}</mark><br>` +
+            `E sua raiz quadrada é igual ${Math.sqrt(delta.toFixed(2))}`
+            calculo.style.lineHeight = '2.5'
         }
     </script>
 </body>
