--- a/Google_Guanabara/Desafios/desafio_1.html
+++ b/Google_Guanabara/Desafios/desafio_1.html
@@ -6,18 +6,19 @@
     <title>Mensagem</title>
     <style>
         body{
-            background-image: linear-gradient(to left, blue, lightblue);
+            background-color: black;
             font-family: Arial, Helvetica, sans-serif;
+            color: #ffffff;
         }
         button{
-            background-color: aqua;
+            background-color: red;
             color: #ffffff;
-            width: 60px;
-            height: 20vh;
+            border: none;
+            padding: 30px;
             cursor: pointer; /* Muda o cursor para o estilo de "mão" indicando um link ou botão clicável */
         }
         button:hover{
-            background-color: aqua;
+            background-color: rgba(255, 0, 0, 0.603);
             opacity: 0.6;
         }
     </style>
