--- a/Google_Guanabara/Desafios/desafio_2.html
+++ b/Google_Guanabara/Desafios/desafio_2.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio de boas-vindas</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
         body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(to right, red, hsl(0, 78%, 49%));
+            font-family: 'Passion One', Helvetica, sans-serif;
+            background:black;
             text-align: center;
         }
         button{
-            background-color: darkgreen;
-            width: 150px;
-            height: 10vh;
+            background-color: red;
+            color: white;
+            font-family: 'Passion One', Times, serif, Helvetica, sans-serif;
+            padding: 20px;
             border-radius: 4px;
             cursor: pointer;
+            border: none;
         }
         button:hover{
-            background-color: darkgreen;
+            background-color: rgba(255, 0, 0, 0.678);
             opacity: 0.8;
         }
         h1{
