--- a/Google_Guanabara/Desafios/desafio_3.html
+++ b/Google_Guanabara/Desafios/desafio_3.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antes e Depois</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
         body{
-            background-image: linear-gradient(to right, rgb(255, 0, 0), lightgreen);
-            font-family: Arial, Helvetica, sans-serif;
+            /* background-image: linear-gradient(to right, rgb(255, 0, 0), lightgreen); */
+            font-family: 'Passion One', Helvetica, sans-serif;
             text-align: center;
+            background: black;
+            color: white;
         }
         button{
             background-color: red;
             color: white;
-            height: 9vh;
+            padding: 20px;
             cursor: pointer;
+            border: none;
+            font-family: 'Passion One', Arial, sans-serif;
+            font-size: 1.3em;
         }
         button:hover{
             background-color: red;
