--- a/Google_Guanabara/Desafios/desafio_4.html
+++ b/Google_Guanabara/Desafios/desafio_4.html
@@ -8,18 +8,20 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
-            background-image: linear-gradient(to left, blue, lightblue);
+            /* background-image: linear-gradient(to left, blue, lightblue); */
+            background: black;
+            color: white;
         }
         button{
-            width: 150px;
-            height: 9vh;
+            padding: 20px;
             background-color: red;
             color: white;
-            box-shadow: 1px 1px 1px black;
             cursor: pointer;
+            border: none;
+            border-radius: 5px 0px 5px 5px;
         }
         button:hover{
-            background-color: rgb(255, 221, 0);
+            background-color: rgba(255, 0, 0, 0.651);
             opacity: 0.9;
             transition: background-color 3s;
         }
@@ -31,8 +33,8 @@
     <script>
         function calculo(){
            let produto = String(window.prompt('Que produto você está comprando: '));
-           let valor_produto = parseInt(window.prompt('Quanto custa o ${produto} que você está comprando'));
-           let valor = parseInt(window.prompt(`Qual foi o valor que você deu para pagar ${produto}`));
+           let valor_produto = parseFloat(window.prompt(`Quanto custa o ${produto} que você está comprando`));
+           let valor = parseFloat(window.prompt(`Qual foi o valor que você deu para pagar ${produto}`));
            if(isNaN(valor_produto) || isNaN(valor)){
                 window.alert('O valor inserido não é numérico, digite novamente: ');
                 window.location.reload();
