--- a/Google_Guanabara/Desafios/desafio_6.html
+++ b/Google_Guanabara/Desafios/desafio_6.html
@@ -7,19 +7,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
         body{
-            align-items: center;
-            background-image: linear-gradient(to right, lightgreen, white );
+            background: black;
             font-family:'Protest Guerrilla', Helvetica, sans-serif;
-            background-repeat: repeat-y;
+            color: #ffffff;
         }
         h1{
-            color: black;
+            color: white;
             text-align: left;
-            text-shadow: 1px 2px;
         }
         button{
             cursor: pointer;
-            background-color: darkslategray;
+            background-color: red;
             padding: 20px;
             border: none;
             border-radius:5px;
@@ -29,7 +27,7 @@
             transition: 2s;
         }
         button:hover{
-            background-color: aquamarine;
+            background-color: rgba(255, 0, 0, 0.699);
         }
     </style>
 </head>
@@ -41,10 +39,13 @@
     </div>
     <script>
         function converter(){
+             let mudanca_elemento = document.getElementById("mudanca_elemento");
             let solicitacao = parseFloat(window.prompt('Digite um temperatura em ºC(Celcius)'))
             let fahrenhati = (solicitacao * 9/5) + 32
             let  kelvin = solicitacao + 273.15
-            document.getElementById("mudanca_elemento").innerHTML = `<h2 style="font-family:Arial; text-shadow:none;">A TEMPERATURA DE ${solicitacao}, corresponde a...\n ${fahrenhati}ºF\n ${kelvin}ºK</h2>`
+            mudanca_elemento.innerHTML = `<h3 style="font-family:Arial; text-shadow:none;">A TEMPERATURA DE ${solicitacao}ºC, corresponde a...</h3>` +
+            `<p style="font-family:Arial">${fahrenhati}ºF</p>` +
+            `<p style="font-family:Arial">${kelvin}ºK</p>`
         }
     </script>
 </body>
