--- a/Google_Guanabara/Desafios/desafio_1.html
+++ b/Google_Guanabara/Desafios/desafio_1.html
@@ -28,16 +28,6 @@
     <button onclick="calcular()">1</button>
     <button onclick="retro()">2</button>
     <button onclick="retroceder()">3</button>
-    <script>
-        function calcular(){
-            window.alert('Você apertou o 1º botão')
-        }
-        function retro(){
-            window.alert('Você apertou o 2º botão')
-        }
-        function retroceder(){
-            window.alert('Você apertou o 3º botão')
-        }
-    </script>
+    <script src="arquivojs_separado/desafio_1.js"></script>
 </body>
 </html>
