--- a/Google_Guanabara/Desafios/desafio_13.html
+++ b/Google_Guanabara/Desafios/desafio_13.html
@@ -38,17 +38,6 @@
     <div id="demo">
         <p>Clique no botão acima para informar as notas do aluno!</p>
     </div>
-    <script>
-        function media_final(){
-            let demo = document.getElementById('demo');
-            const name = String('Qual é o nome do aluno?');
-            const nota_1 = parseFloat(window.prompt(`Primeira nota de ${name}:`));
-            const nota2 = parseFloat(window.prompt(`Segunda nota de ${name}:`));
-            const media_final = (nota_1 + nota2) / 2
-        }
-        if(media_final > 6){
-            demo
-        }
-    </script>
+    <script src="arquivojs_separado/desafio_13.js"></script>
 </body>
 </html>
