--- a/Google_Guanabara/Desafios/desafio_3.html
+++ b/Google_Guanabara/Desafios/desafio_3.html
@@ -31,13 +31,6 @@
 <body>
     <h1><strong>ANTES E DEPOIS</strong></h1>
     <button onclick="sucessor()">Antecessor e sucessor</button>
-    <script>
-        function sucessor(){
-            let num = parseInt(window.prompt('Digite um número inteiro qualquer: '));
-            let antecessor = (num -1)
-            let sucesso = (num + 1)
-            let resolucao = window.alert(`Antes de ${num} temos o número ${antecessor}\nDepois de ${num}, temos o número ${sucesso}`)
-        }
-    </script>
+    <script src="arquivojs_separado/desafio_3.js"></script>
 </body>
 </html>
