--- a/Google_Guanabara/Desafios/desafio_2.html
+++ b/Google_Guanabara/Desafios/desafio_2.html
@@ -32,12 +32,6 @@
 <body>
     <h1>Boas Vindas</h1>
     <button onclick="amostra()">Inicie o desafio</button>
-    <script>
-        function amostra(){
-            let name = window.prompt('Qual é o seu nome?')
-            let idade = window.prompt(`Olá ${name}! Quantos anos você tem? `)
-            window.alert(`Acabei de conhecer ${name}, que tem ${idade} anos de idade!`)
-        }
-    </script>
+    <script src="arquivojs_separado/desafio_2.js"></script>
 </body>
 </html>
