--- a/Google_Guanabara/Desafios/desafio_6.html
+++ b/Google_Guanabara/Desafios/desafio_6.html
@@ -37,16 +37,6 @@
     <div id="mudanca_elemento">
         <p>Clique no botão acima para iniciar</p>
     </div>
-    <script>
-        function converter(){
-             let mudanca_elemento = document.getElementById("mudanca_elemento");
-            let solicitacao = parseFloat(window.prompt('Digite um temperatura em ºC(Celcius)'))
-            let fahrenhati = (solicitacao * 9/5) + 32
-            let  kelvin = solicitacao + 273.15
-            mudanca_elemento.innerHTML = `<h3 style="font-family:Arial; text-shadow:none;">A TEMPERATURA DE ${solicitacao}ºC, corresponde a...</h3>` +
-            `<p style="font-family:Arial">${fahrenhati}ºF</p>` +
-            `<p style="font-family:Arial">${kelvin}ºK</p>`
-        }
-    </script>
+    <script src="arquivojs_separado/desafios_6.js"></script>
 </body>
 </html>
