--- a/Google_Guanabara/Desafios/desafios_aulas_js/ex015/verificador_idade.html
+++ b/Google_Guanabara/Desafios/desafios_aulas_js/ex015/verificador_idade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Idade</title>
-    <link rel="shortcut icon" href="idade.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="grupo-de-idade.ico.png" type="image/x-icon">
     <link rel="stylesheet" href="verificador_idade.css">
 </head>
 <body>
@@ -12,20 +12,21 @@
         <h1>VERIFICADOR DE IDADE</h1>
     </header>
     <section>
-        <form>
+        <form onsubmit="verificar(event)">
                 <div class="alinha" style="align-items:normal; margin-bottom: 5px;">
                 <label for="idade">Ano de Nascimento:</label>
                 <input type="number" name="txtano" id="txtano" style="display:inline-block;"><br>
                 </div>
                 <p>Sexo:
                     <input type="radio" name="radsex" id="masculino" checked>
-                    <label for="masc">Masculino</label>
+                    <label for="masculino">Masculino</label>
                     <input type="radio" name="radsex" id="feminino">
-                    <label for="feminan">Feminino</label>
+                    <label for="feminino">Feminino</label>
                 </p>
-                <button onclick="verificar()">Verificar</button>
+                <button onclick="verificar()" type="submit">Verificar</button>
                 <div id="res">
-                    <p>Preencha os dados acima para ver o resultado!</p>
+                    <p style="text-align: center;">Preencha os dados acima para ver o resultado!</p>
+                    <img id="img" width="150" height="140" style="display: block; margin: auto;">
                 </div>
         </form>
     </section>
