--- a/Desafios_de_ JS/Desafios/desafios_aulas_js/jogo/jogo.html
+++ b/Desafios_de_ JS/Desafios/desafios_aulas_js/jogo/jogo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digite um Número</title>
+    <title>JOGO</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
