--- a/Desafios_de_ JS/Desafios/desafios_aulas_js/ex017/index.html
+++ b/Desafios_de_ JS/Desafios/desafios_aulas_js/ex017/index.html
@@ -18,7 +18,8 @@
                 <button type="submit" ondblclick="tabuada(event)">TABUADA</button>
             </form>
            <div id="resolucao">
-            <select id="select" size="10">
+            <select id="idselect" size="6">
+
             </select>
            </div>
         </section>
