--- a/projetinhos/HashZapp/conversa2.0.html
+++ b/projetinhos/HashZapp/conversa2.0.html
@@ -18,6 +18,7 @@
         </main>
         <footer id="chat-footer">
             <input type="text" id="message_input" class="input-field" placeholder="Digite sua mensagem...">
+            <!-- <input type="file" name="fotos" id="fotos"> -->
             <button id="send-button" onclick="HashZapp()">Enviar</button>
         </footer>
     </section>
