--- a/Desafios_de_ JS/calculadora/calculador.html
+++ b/Desafios_de_ JS/calculadora/calculador.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="png-transparent-calculator-computer-icons-calculator-electronics-desktop-wallpaper-calculator-thumbnail.ico" type="image/x-icon">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Jersey+15&family=Playwrite+AU+SA:wght@100..400&family=Playwrite+VN:wght@100..400&display=swap');
         body{
             background-color:azure;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: "Jersey 15", Helvetica, sans-serif;
         }
         form{
             background-color: rgb(44, 38, 38);
@@ -22,10 +23,11 @@
             width: 99%;
             height: 10vh;
             text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: "Jersey 15", Helvetica, sans-serif;
             background-color: black;
             border-radius: 4px;
             border: 1px  black solid ;
+            font-size: 20px;
         }
         button{
             height: 10vh;
@@ -33,6 +35,7 @@
             background-color:orange;
             opacity: 1.4;
             cursor: pointer;
+            font-family: "Jersey 15", Helvetica, sans-serif;
         }
         .alinha{
             display: flex;
@@ -56,28 +59,28 @@
     <form>
         <input type="text" class="meuinput" name="meuinput" style="color: #ffffff;"><br>
         <div class="alinha2">
-            <button onclick="multiplicacao(mult)" style="color: #ffffff;">X</button>
+            <button onclick="multiplicacao()" style="color: #ffffff;">X</button>
             <div class="alinha">
                 <button onclick="sete(7)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>7</strong></button>
                 <button onclick="oito(8)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>8</strong></button>
                 <button onclick="nove(9)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;"><strong>9</strong></button>
-                <button id="ajuste" style="color: white; background-color:orangered;"><strong>=</strong></button>
+                <button id="ajuste" style="color: white; background-color:orangered;" onclick="calcular()"><strong>=</strong></button>
             </div>
         </div>
         <div class="alinha3">
-            <button onclick="adicao(adi)" style="color: #ffffff;">+</button><br>
+            <button onclick="adicao()" style="color: #ffffff;">+</button><br>
                 <button onclick="quatro(4)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>4</strong></button>
                 <button onclick="cinco(5)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>5</strong></button>
                 <button onclick="seis(6)" style="width: 80px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>6</strong></button><br>
         </div>
         <div class="alinha2">
-            <button onclick="diferenca(dif)" style="color: #ffffff;">-</button><br>
+            <button onclick="diferenca()" style="color: #ffffff;">-</button><br>
                 <button  onclick="um(1)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >1</button>
                 <button onclick="dois(2)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >2</button>
                 <button onclick="tres(3)" style="width: 80px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >3</button>
         </div>
         <div class="alinha2">
-            <button onclick="divisao(div)" style="color: #ffffff;">÷</button><br>
+            <button onclick="divisao()" style="color: #ffffff;">÷</button><br>
                 <button onclick="zero(0)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>0</strong></button>
                 <button  onclick="virgula(vir)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong><strong>,</strong></button>
                 <button onclick="limpar()" style="color: #ffffff; background-color: red;width: 80px;" ><strong>C</strong></button><br>
@@ -85,47 +88,86 @@
     </form>
     <script>
         function zero(numero){
-            let input = document.querySelector('meuinput');
-            meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function um(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero
         }
         function dois(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function tres(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero
         }
         function quatro(numero){
-            let input = document.querySelector('meuinput');
-            meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function cinco(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function seis(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function sete(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero
         }
         function oito(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function nove(numero){
-            let input = document.querySelector('meuinput');
-            // meuinput.value = numero;
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += numero;
         }
         function limpar(){
 
+        }
+        function diferenca(){
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += "-";
+        }
+        function adicao(){
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += "+"; // Só uma string
+        }
+        function multiplicacao(){
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += "x";
+        }
+        function divisao(){
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            input.value += "÷"
+        }
+        function calcular(){
+            event.preventDefault();
+            let input = document.querySelector('.meuinput');
+            try{
+                input.value = eval(input.value.replace('x', '*').replace('÷', '/'));
+            } catch {
+                window.alert("ERRO!");
+            }
         }
     </script>
 </body>
