--- a/Desafios_de_ JS/calculadora/calculador.html
+++ b/Desafios_de_ JS/calculadora/calculador.html
@@ -15,12 +15,12 @@
             background-color: rgb(44, 38, 38);
             margin-left: auto;
             margin-right: auto;
-            width: 230px;
+            width: 15%;
             box-shadow: 2px 2px 2px 2px black;
             margin-top: 80px;
         }
         input{
-            width: 99%;
+            width: 95%;
             height: 10vh;
             text-align: center;
             font-family: "Jersey 15", Helvetica, sans-serif;
@@ -59,7 +59,7 @@
     <form>
         <input type="text" class="meuinput" name="meuinput" style="color: #ffffff;"><br>
         <div class="alinha2">
-            <button onclick="multiplicacao()" style="color: #ffffff;">X</button>
+            <button onclick="multiplicacao()" style="color: #ffffff; width: 50px; height: 10vh;">X</button>
             <div class="alinha">
                 <button onclick="sete(7)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>7</strong></button>
                 <button onclick="oito(8)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>8</strong></button>
@@ -69,15 +69,15 @@
         </div>
         <div class="alinha3">
             <button onclick="adicao()" style="color: #ffffff;">+</button><br>
-                <button onclick="quatro(4)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>4</strong></button>
-                <button onclick="cinco(5)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>5</strong></button>
-                <button onclick="seis(6)" style="width: 80px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>6</strong></button><br>
+                <button onclick="quatro(4)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>4</strong></button>
+                <button onclick="cinco(5)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>5</strong></button>
+                <button onclick="seis(6)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" ><strong>6</strong></button><br>
         </div>
         <div class="alinha2">
             <button onclick="diferenca()" style="color: #ffffff;">-</button><br>
-                <button  onclick="um(1)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >1</button>
-                <button onclick="dois(2)" style="width: 50px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >2</button>
-                <button onclick="tres(3)" style="width: 80px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >3</button>
+                <button  onclick="um(1)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >1</button>
+                <button onclick="dois(2)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >2</button>
+                <button onclick="tres(3)" style="width: 60px; height: 10vh; background-color: rgb(129, 121, 121); color: #ffffff;" >3</button>
         </div>
         <div class="alinha2">
             <button onclick="divisao()" style="color: #ffffff;">÷</button><br>
