fixing mu calculator

--- a/Desafios_de_ JS/calculadora/calculador.html
+++ b/Desafios_de_ JS/calculadora/calculador.html
@@ -36,8 +36,8 @@
         <div class="container">
             <button onclick="divisao()" class="operadores">÷</button>
             <button onclick="zero(0)" class="estilo_numero"><strong>0</strong></button>
-            <button  onclick="virgula()" class="estilo_numero"><strong><strong>,</strong></button>
-            <button onclick="limpar()" class="limpa"><strong>C</strong></button>
+            <button  onclick="virgula()" class="estilo_numero"><strong><strong>.</strong></button>
+            <button onclick="limpar(event)" class="limpa"><strong>C</strong></button>
         </div>
     </form>
     <script src="script.js"></script>
